using theming 8.4.1, fixed grid basic screen, new label on dark mode and table config button

--- a/src/app/main/inputs/inputs.component.scss
+++ b/src/app/main/inputs/inputs.component.scss
@@ -12,8 +12,12 @@ label.input-comp-title {
 
 }
 
-o-text-input{
+o-text-input {
   margin-bottom: 5px;
+}
+
+a.active .new {
+  color: black;
 }
 
 .new {
