--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -21,7 +21,7 @@ o-app-layout-sidenav {
   max-width: 32px;
   min-width: 32px;
   width: 32px;
-  padding: 4px 0 4px 4px;
+  padding: 4px 0 4px 20px;
   height: 200px;
   display: flex;
   justify-content: center;
